<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shelfie</string>

    <string name="action_insert_dummy_data">Add dummy data</string>
    <string name="action_delete_all_entries">Delete all database entries</string>
    <string name="editing_activity_add_new_book">Add a book</string>
    <string name="editing_activity_edit_existing_new_book">Edit book</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="category_product_name">Name: </string>
    <string name="category_supplier">Supplier details</string>
    <string name="category_overview">Product overview</string>
    <string name="category_state">State</string>
    <string name="category_availability">Availability</string>
    <string name="category_publication_year">Publication year</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>

    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone_number">Phone number</string>
    <string name="hint_book_author">Author</string>
    <string name="hint_book_title">Title</string>
    <string name="hint_book_state">State</string>
    <string name="hint_book_language">Language</string>
    <string name="hint_book_publication_year">Publication year</string>
    <string name="hint_book_price">Price</string>

    <string name="product_name_kindle_book">Kindle book</string>
    <string name="product_name_pocket_book">Pocket book</string>
    <string name="product_name_standard_book">Standard book</string>
    <string name="product_name_album">Album</string>

    <string name="state_unknown">Unknown</string>
    <string name="state_used">Used</string>
    <string name="state_new">New</string>

    <string name="availability_not_available">Not available</string>
    <string name="availability_in_storage">In storage</string>
    <string name="availability_in_store">In store</string>

    <string name="editor_insert_book_successful">Book successfully saved</string>
    <string name="editor_insert_book_failure">Error saving book</string>
    <string name="editor_edit_book_successful">Book successfully updated</string>
    <string name="editor_edit_book_failure">Error updating book</string>

    <string name="listview_book_author_placeholder">Eugene Labiche</string>
    <string name="listview_book_title_placeholder">Stage plays I.</string>

    <string name="empty_view_empty_inventory_text">Not a lot of books here&#8230;</string>
    <string name="empty_view_prompt_text">Add to the inventory!</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit entry?</string>
    <string name="unsaved_changes_discard">Discard</string>
    <string name="unsaved_changes_stay">Stay</string>

    <string name="editor_delete_book_successful">Book entry successfully deleted</string>
    <string name="editor_delete_book_failed">Error deleting book entry</string>
    <string name="delete_dialog_msg">Delete book from inventory?</string>
    <string name="editor_delete_all_entries_successful">Database deletion successful</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="activity_shelf_display_unknown_author">Unknown author</string>
    <string name="activity_shelf_display_unknown_title">Unknown title</string>
    <string name="activity_shelf_display_unknown_product_name">Unknown category</string>
    <string name="activity_shelf_display_default_price">0</string>
    <string name="activity_shelf_display_default_quantity">0</string>

    <string name="button_text_call_supplier">Call supplier</string>
    <string name="button_text_decrease_quantity">-</string>
    <string name="button_text_increase_quantity">+</string>
    <string name="button_quantity_change_failure_msg">Cannot be less than 0!</string>
    <string name="button_quantity_change_to_out_of_stock_msg">Item became out of stock</string>
    <string name="button_sale">Sale</string>
    <string name="button_sale_failure_msg">Failure to decrease product quantity</string>
    <string name="button_sale_item_unavailable_msg">Item already out of stock</string>

    <string name="euro">\u20ac</string>

    <string name="toast_warning_invalid_author">Book requires a valid author</string>
    <string name="toast_warning_invalid_title">Book requires a valid title</string>
    <string name="toast_warning_invalid_language">Book requires its language to be set</string>
    <string name="toast_warning_invalid_quantity">Book requires a valid quantity</string>
    <string name="toast_warning_invalid_publication_year">Book requires a valid publication year</string>

    <string name="toast_warning_invalid_price">Book requires a valid price</string>
    <string name="toast_warning_invalid_product_name">Book requires a valid product name</string>
    <string name="toast_warning_invalid_state">Book requires its state to be set</string>
    <string name="toast_warning_invalid_availability">Book requires its availability to be set</string>

    <string name="toast_warning_null_value_in_entry">Please fill in all the fields</string>

    <string name="log_tag_db_created">db created</string>
    <string name="log_tag_n_rows_deleted_from_db">rows deleted from book database</string>

</resources>
