<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/medium_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_author"
            style="@style/TextStyle"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"

            tools:text="@string/listview_book_author_placeholder" />

        <TextView
            android:id="@+id/book_title"
            style="@style/TextStyle"
            tools:text="@string/listview_book_title_placeholder" />

        <TextView
            android:id="@+id/book_product_name"
            style="@style/TextStyle"
            tools:text="@string/category_product_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/book_price"
        style="@style/TextStyle"
        tools:text="@string/category_price" />

    <Button
        android:id="@+id/button_sale"
        android:layout_marginLeft="@dimen/button_sale_margin"
        android:layout_marginRight="@dimen/button_sale_margin"
        android:layout_width="@dimen/button_sale_size"
        android:layout_height="@dimen/button_sale_size"
        android:layout_gravity="end"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/button_sale" />

    <TextView
        android:id="@+id/book_quantity"
        style="@style/TextStyle"
        android:layout_gravity="end"
        tools:text="@string/category_quantity" />

</LinearLayout>