<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorLightGray"
    android:paddingBottom="@dimen/small_margin"
    android:paddingTop="@dimen/small_margin">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin"
        tools:context=".EditingActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="@dimen/small_margin">

                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditTextStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/edit_supplier_phone_number"
                    style="@style/EditTextStyle"
                    android:hint="@string/hint_supplier_phone_number"
                    android:inputType="phone" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="@dimen/small_margin"
                android:paddingRight="@dimen/small_margin">

                <LinearLayout
                    android:id="@+id/container_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_product_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinner_product_name"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/big_and_spinner_margin"
                            android:paddingRight="@dimen/medium_margin"
                            android:spinnerMode="dropdown" />
                    </LinearLayout>
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_book_quantity"
                    style="@style/EditTextStyle"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/edit_book_author"
                    style="@style/EditTextStyle"
                    android:hint="@string/hint_book_author"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/edit_book_title"
                    style="@style/EditTextStyle"
                    android:hint="@string/hint_book_title"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/edit_book_language"
                    style="@style/EditTextStyle"
                    android:hint="@string/hint_book_language"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_state" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_state"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/big_and_spinner_margin"
                    android:paddingRight="@dimen/medium_margin"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_availability" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_availability"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/big_and_spinner_margin"
                    android:paddingRight="@dimen/medium_margin"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_publication_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_publication_year" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="@dimen/small_margin"
                android:paddingRight="@dimen/small_margin">

                <EditText
                    android:id="@+id/edit_book_publication_year"
                    style="@style/EditTextStyle"
                    android:hint="@string/hint_book_publication_year"
                    android:inputType="number" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="@dimen/small_margin">

                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/EditTextStyle"
                    android:hint="@string/hint_book_price"
                    android:inputType="number" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
